Update ActionSample.java